# displayboard

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITFLOW.md  LICENSE  QUICK-FIX-PERMISSIONS.md  README.md  SECURITY.md  docker-compose.yml  makefile  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  push_protection.yml  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  codeql.yml  consumer-typecheck.yml   enforce-branch-name.yml  license-scan.yml  release.yml  require-linked-issue.yml
deployment/: 99-neopixel.rules  README.md  setup-permissions.sh
rulesets/: ruleset-develop.json  ruleset-main.json
skaven_soundscape/: bell.py  board.py  gpiozero.py  lighting.py  main.py  neopixel.py  video_loop.py
src/displayboard/: __init__.py  bell.py  board.py  config.py  lighting.py  main.py  neopixel.py  sounds.py  video_loop.py
src/skaven/: bell.py  board.py  config.py  lighting.py  main.py  mister_control.py  neopixel.py  sounds.py  video_loop.py
tests/: conftest.py  conftest_dummy.py  test_bell.py  test_board.py  test_consumer.py  test_gpiozero.py  test_lighting.py  test_main.py  test_mister_control.py  test_neopixel.py  test_sounds.py  test_soundscape.py  test_video_loop.py
typings/RPi/: GPIO.pyi
