# Minimal setup.cfg for pip compatibility
[metadata]
name = displayboard
version = 0.1.0
description = A randomized soundscape engine for Warhammer Age of Sigmar display boards
author = Kristian Peacocke
license = MIT

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >=3.9
